rajout d'images VS

--- a/boutique.html
+++ b/boutique.html
@@ -18,7 +18,7 @@
 
   <div class="cards-container">
     <div class="product-card">
-      <img src="/attachments/boutique/first-tshirt.jpg" alt="Product 1">
+      <img src="attachments/boutique/first-tshirt.jpg" alt="Product 1">
       <div class="card-text">
         <h3>Black Thorfin T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/attachments/boutique/second-tshirt.jpg" alt="Product 2">
+      <img src="attachments/boutique/second-tshirt.jpg" alt="Product 2">
       <div class="card-text">
         <h3>Vinland Saga White T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/attachments/boutique/5.jpg" alt="Product 3">
+      <img src="attachments/boutique/5.jpg" alt="Product 3">
       <div class="card-text">
         <h3>Gray Hoodie</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/attachments/boutique/fourth-tshirt.jpg" alt="Product 4">
+      <img src="attachments/boutique/fourth-tshirt.jpg" alt="Product 4">
       <div class="card-text">
         <h3>Black T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
