--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="slide-container">
         <div class="firstslider">
-            <img src="/attachments/1.webp" alt="photo of the protagonists" id="slider">
+            <img src="attachments/1.webp" alt="photo of the protagonists" id="slider">
         </div>
         <button id="prev"><</button>
         <button id="next">></button>
@@ -23,7 +23,7 @@
     <div class="testimonial-container">
         <div class="testimonial-avatar">
            <img src=
-              "/attachments/user.webp"
+              "attachments/user.webp"
               alt="User Avatar">
         </div>
         <div class="testimonial-text">
@@ -35,7 +35,7 @@
      <div class="testimonial-container">
         <div class="testimonial-avatar">
            <img src=
-              "/attachments/user.webp"
+              "attachments/user.webp"
               alt="User Avatar">
         </div>
         <div class="testimonial-text">
@@ -49,7 +49,7 @@
      <div class="testimonial-container">
         <div class="testimonial-avatar">
            <img src=
-              "/attachments/user.webp"
+              "attachments/user.webp"
               alt="User Avatar">
         </div>
         <div class="testimonial-text">
