--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 </div>
     <div class="button-container">
-       <button class="learn-more">learn more</button>
+       <button class="learn-more"><a href="about.html">learn more</a></button>
     </div>
 </body>
 <footer></footer>
