--- a/boutique.html
+++ b/boutique.html
@@ -14,10 +14,19 @@
   <div class="boutique-container">
     <h1>Vinland Saga Merch Boutique</h1>
     <p>Explore the world of Vinland Saga with our exclusive merchandise.</p>
+    <div class="search-products">
+      <select class="search-control" id="product">
+         <option value="0">Choose your merch</option>
+         <option value="1">Black Thorfin T-shirt</option>
+         <option value="2">Vinland Saga White T-shirt</option>
+         <option value="3">Gray Hoodie</option>
+         <option value="4">Black T-shirt</option>
+      </select>
+   </div>
+   <button class="boutique-button">Search</button>  
   </div>
-
   <div class="cards-container">
-    <div class="product-card">
+    <div class="product-card" id="1">
       <img src="attachments/boutique/first-tshirt.jpg" alt="Product 1">
       <div class="card-text">
         <h3>Black Thorfin T-shirt</h3>
@@ -26,7 +35,7 @@
       </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" id="2">
       <img src="attachments/boutique/second-tshirt.jpg" alt="Product 2">
       <div class="card-text">
         <h3>Vinland Saga White T-shirt</h3>
@@ -35,7 +44,7 @@
       </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" id="3">
       <img src="attachments/boutique/5.jpg" alt="Product 3">
       <div class="card-text">
         <h3>Gray Hoodie</h3>
@@ -44,7 +53,7 @@
       </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" id="4">
       <img src="attachments/boutique/fourth-tshirt.jpg" alt="Product 4">
       <div class="card-text">
         <h3>Black T-shirt</h3>
