--- a/boutique.html
+++ b/boutique.html
@@ -12,18 +12,18 @@
   <header></header>
 
   <div class="boutique-container">
-    <h1>Vinland Saga Merch Boutique</h1>
-    <p>Explore the world of Vinland Saga with our exclusive merchandise.</p>
+    <h1>Boutique Vinland Saga</h1>
+    <p>Explorez le monde de Vinland Saga avec nos produits dérivés !</p>
     <div class="search-products">
       <select class="search-control" id="product">
-         <option value="0">Choose your merch</option>
+         <option value="0">Choisissez votre produit</option>
          <option value="1">Black Thorfin T-shirt</option>
          <option value="2">Vinland Saga White T-shirt</option>
          <option value="3">Gray Hoodie</option>
          <option value="4">Black T-shirt</option>
       </select>
    </div>
-   <button class="boutique-button">Search</button>  
+   <button class="boutique-button">Rechercher</button>  
   </div>
   <div class="cards-container">
     <div class="product-card" id="1">
@@ -31,7 +31,7 @@
       <div class="card-text">
         <h3>Black Thorfin T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
-        <a href="#" class="buy-button">Buy Now</a>
+        <a href="#" class="buy-button">Acheter</a>
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <div class="card-text">
         <h3>Vinland Saga White T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
-        <a href="#" class="buy-button">Buy Now</a>
+        <a href="#" class="buy-button">Acheter</a>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
       <div class="card-text">
         <h3>Gray Hoodie</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
-        <a href="#" class="buy-button">Buy Now</a>
+        <a href="#" class="buy-button">Acheter</a>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
       <div class="card-text">
         <h3>Black T-shirt</h3>
         <p>Show that you're a fan of Vinland-Saga, 100% cotton</p>
-        <a href="#" class="buy-button">Buy Now</a>
+        <a href="#" class="buy-button">Acheter</a>
       </div>
     </div>
   </div>
