--- a/index.html
+++ b/index.html
@@ -1,68 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Vinland-Saga</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="index.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
+   <title>Vinland-Saga</title>
+   <link rel="stylesheet" href="style.css">
+   <script defer src="index.js"></script>
 </head>
 <header></header>
+
 <body>
-    <div class="slide-container">
-        <div class="firstslider">
-            <img src="attachments/1.webp" alt="photo of the protagonists" id="slider">
-        </div>
-        <button id="prev"><</button>
-        <button id="next">></button>
-    </div>
-    <div class="user-testimonial">
-    <div class="testimonial-container">
-        <div class="testimonial-avatar">
-           <img src=
-              "attachments/user.webp"
-              alt="User Avatar">
-        </div>
-        <div class="testimonial-text">
-           <p class="testimonial-name">@minihingstar</p>
-           <p class="testimonial-role">utilisateur imdb</p>
-           <p>"4 episodes in... And can tell... tissues needed here. The anime is as epic as the manga. So far 10/10"</p>
-        </div>
-     </div>
-     <div class="testimonial-container">
-        <div class="testimonial-avatar">
-           <img src=
-              "attachments/user.webp"
-              alt="User Avatar">
-        </div>
-        <div class="testimonial-text">
-           <p class="testimonial-name">@mdwaqaruddin-52968</p>
-           <p class="testimonial-role">utilisateur imdb</p>
-           <p>"Spoiler- Its Going to become Another Classic..... Infinte Potential. In few years it going to be recognized among Deathnote, Fullmetal Alchemist Brotherhood, Attack on titan, Stein's Gate, and then VINLAND SAGA...Mark these words..... Rating- 10/10
-              "
-           </p>
-        </div>
-     </div>
-     <div class="testimonial-container">
-        <div class="testimonial-avatar">
-           <img src=
-              "attachments/user.webp"
-              alt="User Avatar">
-        </div>
-        <div class="testimonial-text">
-           <p class="testimonial-name">@r-aldowaisan</p>
-           <p class="testimonial-role">utilisateur imdb</p>
-           <p>"Best Ending Ever ... Amazing, wow, i watched this episode like 5 times already, every 3 or 4 days i watch it again, incridabel really. And am 53 old."</p>
-        </div>
-     </div>
-  </div>
-</div>
-    <div class="button-container">
-       <button class="learn-more"><a href="about.html">Découvrez le manga ici !</a></button>
-    </div>
+   <div class="slide-container">
+      <div class="firstslider">
+         <img src="attachments/1.webp" alt="photo of the protagonists" id="slider">
+      </div>
+      <button id="prev"><</button>
+            <button id="next">></button>
+   </div>
+   <div class="user-testimonial">
+      <div class="testimonial-container">
+         <div class="testimonial-avatar">
+            <img src="attachments/user.webp" alt="User Avatar">
+         </div>
+         <div class="testimonial-text">
+            <p class="testimonial-name">@minihingstar</p>
+            <p class="testimonial-role">utilisateur imdb</p>
+            <p>"4 episodes in... And can tell... tissues needed here. The anime is as epic as the manga. So far 10/10"
+            </p>
+         </div>
+      </div>
+      <div class="testimonial-container">
+         <div class="testimonial-avatar">
+            <img src="attachments/user.webp" alt="User Avatar">
+         </div>
+         <div class="testimonial-text">
+            <p class="testimonial-name">@mdwaqaruddin-52968</p>
+            <p class="testimonial-role">utilisateur imdb</p>
+            <p>"Spoiler- Its Going to become Another Classic..... Infinte Potential. In few years it going to be
+               recognized among Deathnote, Fullmetal Alchemist Brotherhood, Attack on titan, Stein's Gate, and then
+               VINLAND SAGA...Mark these words..... Rating- 10/10
+               "
+            </p>
+         </div>
+      </div>
+      <div class="testimonial-container">
+         <div class="testimonial-avatar">
+            <img src="attachments/user.webp" alt="User Avatar">
+         </div>
+         <div class="testimonial-text">
+            <p class="testimonial-name">@r-aldowaisan</p>
+            <p class="testimonial-role">utilisateur imdb</p>
+            <p>"Best Ending Ever ... Amazing, wow, i watched this episode like 5 times already, every 3 or 4 days i
+               watch it again, incridabel really. And am 53 old."</p>
+         </div>
+      </div>
+   </div>
+   </div>
+   <div class="button-container">
+      <button class="learn-more"><a href="about.html">Découvrez le manga ici !</a></button>
+   </div>
 </body>
 <footer></footer>
+
 </html>
